--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script defer src="app.js"></script>
 
     <title>Galaxy Energy Solar</title>
-    <link rel="icon" href="images/logo.png" type="image/x-icon">
+    <link rel="icon" href="images/logo2.png" type="image/x-icon">
 
 </head>
 
@@ -25,7 +25,7 @@
 
     <section class="header">
         <nav>
-            <a href="index.html"><img src="images/logo.png" alt="logo da empresa"></a>
+            <a href="index.html"><img src="images/logo2.png" alt="logo da empresa"></a>
             <div class="nav-links" id="navlinks">
                 <i class="fa fa-solid fa-x icone-custom" style="color: #ffffff;" onclick="hideMenu()"></i>
                 <ul>
@@ -38,7 +38,9 @@
             <i class="fa fa-bars icone-custom" style="color: #ffffff;" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>Líder no campo da energia renovável</h1>
+            <h1>Galaxy Energy</h1>
+            <br>
+            <h2>Líder no campo da Energia Renovável</h2>
             <p>A Galaxy Energy Solar, líder no campo da energia renovável e especializada em Sistemas de Geração
                 Distribuída <br> é sua parceira confiável para soluções energéticas inteligentes.
             </p>
@@ -48,7 +50,7 @@
 
     <section class="quemSomos" id="quemSomos">
         <h1>Quem Somos</h1>
-        <p>A Galaxy Energy Solar, líder no campo da energia renovável e especializada em Sistemas de Geração
+        <p>A Galaxy Energy Solar, líder no campo da Energia Renovável e especializada em Sistemas de Geração
             Distribuída, é sua parceira confiável para soluções energéticas inteligentes.
             Comprometemo-nos a proporcionar uma experiência energética superior, impulsionando a eficiência e a
             sustentabilidade. <br> <br> Nossa oferta completa de serviços abrange desde o dimensionamento de
@@ -82,33 +84,12 @@
             </div>
 
             <div class="card cardProd">
-                <img src="images/produto2.png" class="card-img-top imgProd" alt="Produto 2">
+                <img src="images/produtoInversor.jpg" class="card-img-top imgProd" alt="Produto 2">
                 <div class="card-body">
                     <h5 class="card-title">Inversor</h5>
                     <p class="card-text">O inversor é o equipamento central em um sistema fotovoltaico pois
                         transforma a energia de corrente continua produzida pelos painéis para corrente
                         alternada de forma que possa ser utilizada pelos equipamentos elétricos.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                </div>
-            </div>
-
-            <div class="card cardProd">
-                <img src="images/produto3.png" class="card-img-top imgProd" alt="Produto 3">
-                <div class="card-body">
-                    <h5 class="card-title">Controlador de Carga</h5>
-                    <p class="card-text">Os controladores de carga são dispositivos que ficam entre os painéis
-                        fotovoltaicos e são utilizados exclusivamente para carregamento de baterias em sistemas
-                        off grid.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
-                </div>
-            </div>
-
-            <div class="card cardProd">
-                <img src="images/produto4.png" class="card-img-top imgProd" alt="Produto 4">
-                <div class="card-body">
-                    <h5 class="card-title">Baterias</h5>
-                    <p class="card-text">Diversos tipos de baterias podem ser utilizados nos sistemas de energia
-                        solar off grid e híbridos.</p>
                     <a href="#" class="btn btn-primary">Comprar</a>
                 </div>
             </div>
