--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         <div class="text-box">
             <h1>Galaxy Energy</h1>
             <br>
-            <h2>Líder no campo da Energia Renovável</h2>
-            <p>A Galaxy Energy Solar, líder no campo da energia renovável e especializada em Sistemas de Geração
-                Distribuída <br> é sua parceira confiável para soluções energéticas inteligentes.
+            <br>
+            <h2>O Sol como a sua principal fonte de Energia</h2>
+            <br>
+            <p><strong>líder no campo da energia renovável e especializada em Sistemas de Geração
+                Distribuída <br> é sua parceira confiável para soluções energéticas inteligentes.</strong><br>
             </p>
             <a href="" class="hero-btn">Saiba Mais</a>
         </div>
@@ -197,7 +199,6 @@
             </div>
         </div>
     </section>
-
     <hr>
 
     <section class="financiamento" id="financiamento">
