--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <br>
             <h2>O Sol como a sua principal fonte de Energia</h2>
             <br>
-            <p><strong>líder no campo da energia renovável e especializada em Sistemas de Geração
-                Distribuída <br> é sua parceira confiável para soluções energéticas inteligentes.</strong><br>
+            <p><strong>Líder no Campo da Energia Renovável e especializada em Sistemas de Geração
+                Distribuída.</strong> <br> é sua parceira confiável para soluções energéticas inteligentes.<br>
             </p>
             <a href="" class="hero-btn">Saiba Mais</a>
         </div>
